# graphrag-agentic-system

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: main.py  middleware.py
api/routes/: __init__.py  admin.py  ingest.py  query.py
config/: __init__.py  lightrag_config.yaml  settings.py
config/prompts/: crag.md  decomposition.md  orchestrator.md  step_back.md
docs/: GraphRAG_AgenticRAG_Architecture_Report.md
notebooks/: 01_ingestion_test.ipynb  02_orchestrator_test.ipynb  03_crag_evaluation.ipynb
scripts/: evaluate_benchmark.py  ingest_bulk.py  migrate_schema.py
src/: __init__.py
src/agents/: __init__.py  planner.py  step_back.py  tools.py  web_search.py
src/core/: __init__.py  graph.py  nodes.py  orchestrator.py  state.py
src/crag/: __init__.py  evaluators.py  module.py
src/evaluation/: __init__.py  runner.py
src/ingestion/: lightrag_factory.py  pipeline.py  rag_anything.py
src/llm/: __init__.py  client.py  json_utils.py
src/retrieval/: bm25.py  cypher.py  hybrid.py  lightrag_client.py
src/utils/: cache.py  logging.py  prompts.py
tests/: conftest.py
tests/integration/: test_orchestrator_smoke.py
tests/unit/: test_bm25_memory.py  test_hybrid_rrf.py
