[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphrag-agentic-system"
version = "0.1.0"
description = "GraphRAG + Agentic orchestration + CRAG (Neo4j / LightRAG stack)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "redis>=5.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "langgraph>=0.2",
    "langchain-core>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
lightrag = []
neo4j = ["neo4j>=5.18"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "scripts*", "notebooks*", "docs*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
